# craft

./: .gitignore  CMakeLists.extra.cmake  CMakeLists.txt  README.md  craft.toml  install.ps1  install.sh
docs/: craft-toml.md  getting-started.md
docs/commands/: README.md  add.md  build.md  clean.md  config.md  gen.md  help.md  init.md  project.md  remove.md  run.md  template.md  update.md  upgrade.md  workspace.md
game/: CMakeLists.txt
include/: add.h  build.h  clean.h  cmake.h  compile.h  config.h  craft_toml.h  deps.h  dispatcher.h  gen.h  help.h  init.h  parser.h  platform.h  project.h  registry.h  remove.h  run.h  setup.h  template.h  update.h  upgrade.h  utils.h  workspace.h
src/: add.c  build.c  clean.c  cmake.c  compile.c  config.c  craft.c  craft_toml.c  deps.c  dispatcher.c  gen.c  help.c  init.c  main.c  parser.c  platform.c  project.c  registry.c  remove.c  run.c  setup.c  template.c  tomlc17.c  update.c  upgrade.c  utils.c  workspace.c
